* New:     - Added new End-Point [/api/votes/place] to place or update votes for captions     - Added new function [placeOrUpdateVote] in votes controller to place or update new votes
* Updated:
    - docs-api modified with new end-point for place votes
