# routes/vote.js
@@ -5,7 +5,8 @@ const {
   getVote,
   createVote,
   updateVote,
-  deleteVote
+  deleteVote,
+  placeOrUpdateVote
 } = require('../controllers/vote');
 
 const { upload } = require('../utils/handleStorage');
@@ -17,10 +18,18 @@ const {
   updateVoteValidator
 } = require('../validators/vote');
 
+/**
+ * Fulrest routes
+ */
 router.get('/', validateToken, getVotes);
 router.get('/:id', validateToken, requestVoteValidator, getVote);
 router.post('/', validateToken, upload.single('photo'), creatVoteValidator, createVote);
 router.put('/:id', validateToken, requestVoteValidator, updateVoteValidator, updateVote);
 router.delete('/:id', validateToken, requestVoteValidator, deleteVote);
+
+/**
+ * Others routes
+ */
+router.post('/place', validateToken, creatVoteValidator, placeOrUpdateVote);
 
 module.exports = router;
